# open-compute-protocol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  ocp_startup.py  pyproject.toml  runtime.py  server.py  server_app.py  server_app_status.py  server_artifacts.py  server_browser_client.py  server_connect.py  server_contract.py  server_control.py  server_control_page.py  server_http_handlers.py  server_missions.py  server_ops.py  server_routes.py  server_runtime.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: sanity.yml
Sources/OCPDesktopCore/: LauncherCore.swift  MissionControlDerivedModels.swift  ProofAssistant.swift
docs/: DEMO_TWO_MACS_AND_PHONE.md  OCP_ALL_DEVICES_PLAN.md  OCP_HTTP_API.md  OCP_MASTER_PLAN.md  OCP_STATUS.md  OCP_v0.2_EXECUTION_ALPHA.md  OPEN_COMPUTE_PROTOCOL_v0.1.md  OPERATOR_AUTH.md  QUICKSTART.md  RELEASE_v0.1.4.md  ROADMAP_v0.1.7.md  SECURITY_MODEL.md  THREAT_MODEL.md
docs/spec/: OCP_CAPABILITY_GRANTS.md  OCP_v0.1.md
integrations/: personal_mirror_server.py
mesh/: __init__.py  crypto.py  sovereign.py
mesh_artifacts/: __init__.py  service.py
mesh_autonomy/: __init__.py  service.py
mesh_execution/: __init__.py  service.py
mesh_governance/: __init__.py  service.py
mesh_helpers/: __init__.py  service.py
mesh_missions/: __init__.py  service.py
mesh_protocol/: __init__.py  capability_grants.py  conformance.py  constants.py  envelopes.py  errors.py  schemas.py
mesh_scheduler/: __init__.py  service.py
mesh_state/: __init__.py  projections.py  schema.py  service.py
ocp_desktop/: __init__.py  launcher.py  macos_app.py
scripts/: __init__.py  build_macos_app.py  check_protocol_conformance.py  export_contract.py  start_ocp.sh  start_ocp_easy.py
tests/: README.md  test_sovereign_mesh.py
tests/OCPDesktopCoreTests/: LauncherCoreTests.swift
(+9 files in other folders)
